Fixed alignment issues with HTML

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -37,7 +37,6 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 700px;
 }
 
 #contact {
@@ -69,10 +68,6 @@ a {
 }
 
 .github {
-  padding: 10px 10px 10px 10px;
-}
-
-.section {
   padding: 10px 10px 10px 10px;
 }
 
@@ -114,6 +109,8 @@ a {
   flex-direction: column;
   align-items: flex-end;
   justify-content:flex-end;
+  padding-right: 30px;
+  padding-bottom: 20px;
 }
 
 @media (min-width: 576px) {
